Project/Phase2/test_ex/test3.out
Error type 5 at line 5: unmatching type on both sides of assignment
