Project/Phase2/test_ex/test3.spl
int main()
{
    int num = 10;
    float dec = 5.5;
    num = dec;
    return 0;
}

